Fixed wrong color format

--- a/static/src/stylesheets/module/commercial/_adverts-soulmates.scss
+++ b/static/src/stylesheets/module/commercial/_adverts-soulmates.scss
@@ -122,5 +122,5 @@
 }
 
 .logo--tone-soulmates {
-    fill: #fff;
+    fill: #ffffff;
 }
